fix: reset alignment for the logo in struts apps

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/india/india.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/india/india.css
@@ -66,8 +66,8 @@ input[type=text],input[type=password],input[type=email],textarea
 #headerBanner
 {
   position: absolute;
-  top: 13px;
-  left: 55px;
+  top: 0;
+  left: 0;
 }
 
 #headerText
